Fix section top alignment/margin

--- a/sass/components/_section-header.scss
+++ b/sass/components/_section-header.scss
@@ -1,6 +1,7 @@
 .section-header {
   text-align: center;
   display: block;
+  margin-top : 70px;
 
   h2 {
     color: $colorSecondary;
